# zh-journal-docx-formatter

./: .gitignore  README.en.md  README.md  SKILL.md  pyproject.toml  requirements.txt
references/: format-spec.md
scripts/: apply_docx_format.py  md_to_docx.py  save_template.py  validate_spec.py
src/chinese_paper_formatter/: __init__.py  cli.py  docx_format.py  format_spec.py  numbering.py  templates.py  validation.py
src/templates/: __init__.py  loader.py  schema.py  validator.py  wizard.py
src/utils/: numbering.py
templates/defaults/: 中文期刊默认规则.yaml
templates/journals/: 中国社会科学.yaml
templates/presets/: circled-in-text.yaml  gb7714-footnote.yaml  gb7714-in-text.yaml
tests/: test_docx_format.py  test_format_spec.py
